changes made to card class

--- a/index.html
+++ b/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Expanding Cards</title>
-</head>
-<body>
-  <div class="container">
-    <div class="panel active" style=" background-image: url('https://images.unsplash.com/photo-1648737119359-510d4f551382?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80')" >
+  </head>
+  <body>
+    <div class="container">
+      <div
+        class="card active"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1648737119359-510d4f551382?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80');
+        "
+      >
         <h3>Explore The World</h3>
-    </div>
-    <div class="panel " style=" background-image: url('https://images.unsplash.com/photo-1649937760678-6260afc7fb95?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80')" >
+      </div>
+      <div
+        class="card"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1649937760678-6260afc7fb95?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        "
+      >
         <h3>Baby Happiness</h3>
-    </div>
-    <div class="panel " style=" background-image: url('https://images.unsplash.com/photo-1650062155560-5576e47daa65?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80')" >
+      </div>
+      <div
+        class="card"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1650062155560-5576e47daa65?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        "
+      >
         <h3>Art</h3>
-    </div>
-    <div class="panel " style=" background-image: url('https://images.unsplash.com/photo-1648737964978-597655dd82b6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80')" >
+      </div>
+      <div
+        class="card"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1648737964978-597655dd82b6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        "
+      >
         <h3>Work Environment</h3>
-    </div>
-    <div class="panel " style=" background-image: url('https://images.unsplash.com/photo-1648737967267-f896a3cea436?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80')" >
+      </div>
+      <div
+        class="card"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1648737967267-f896a3cea436?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        "
+      >
         <h3>Personal Computer</h3>
+      </div>
     </div>
-
-  </div>
-
-
-   
-    
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
