added an H2 header tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Expanding Cards</title>
   </head>
   <body>
+      <h2>Tap on Card to Expand</h2>
     <div class="container">
       <div
         class="card active"
